fix(components): align correctly years and posts list
For some reasons, the behavior of `align-items: first baseline` has
changed and the layout was broken. `align-items: start` is not so bad
and works correctly.

--- a/src/components/organisms/posts-list/posts-list.module.scss
+++ b/src/components/organisms/posts-list/posts-list.module.scss
@@ -10,7 +10,7 @@
     @include mix.dimensions("md") {
       display: grid;
       grid-template-columns: var(--col1, auto) minmax(0, 1fr);
-      align-items: first baseline;
+      align-items: start;
       gap: var(--gap, var(--spacing-lg));
     }
   }
